Fix extra spacing within the editor for the 3rd item
#279

--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -16,11 +16,6 @@
 					flex-wrap: wrap;
 					position: relative;
 				}
-
-				.wp-block:nth-of-type(3) .wp-block-coblocks-pricing-table-item,
-				.wp-block:nth-of-type(4) .wp-block-coblocks-pricing-table-item {
-					margin-top: 30px;
-				}
 			}
 		}
 	}
